# kraken

./: .gitignore  CMakeLists.txt  Kraken_Compiled_Grammer_file_format.txt  LICENCE.md  README.md  basic_dyns  bf.kp  captain.sh  captian.sh  collections.kp  comp_wasm.kp  compile_for_web.sh  current_stats.sh  debug_plans  demo.sh  fact.kp  fib-interp.kp  fib.c  fib.kp  fib.py  fib.scm  fib2.kp  fib_let.c  fib_let.kp  fib_let.py  fib_let.scm  fib_tests.sh  find.kp  flake.nix  foldl_demo.kp  fungll.kp  fungll.krak  fungll_test.kp  future_features.txt  import_test.kp  index.html  k.krak  k_prime.krak  kraken.krak  krakenGrammer.kgm  (+39 more)
ChrisTest/: .ChrisVec.krak.un~  .ChrisVecTest.krak.un~  .ErrorLog.txt.un~  .HelloWorld.krak.un~  .SupressOut.sh.un~  ChrisVec.krak  ChrisVecTest.krak  ErrorLog.txt  HelloWorld.krak  TrigTest.krak
clojure_fib/: CHANGELOG.md  README.md
deprecated_compiler/: .gitignore  main.cpp
doc/: .gitignore  Manual.aux  Manual.tex  cited-paper.bib  make_paper.sh  make_presentation.sh  make_writeup.sh  presentation.tex  shell.nix  writeup.tex
fib_test/: builtin_fib.kp  builtin_fib.wasm  fib_compiled.wasm  fib_compiled_let.wasm  fib_compiled_manual.wasm  fib_interpreted.wasm  fib_interpreted_let.wasm  fib_let.kp  fib_tests.sh  table.md
include/: .ASTData.h.swp  .ASTTransformation.h.swp  ASTData.h  ASTTransformation.h  CCodeTriple.h  CGenerator.h  CollapseTransformation.h  GraphStructuredStack.h  Importer.h  LALRParser.h  Lexer.h  NodeTransformation.h  NodeTree.h  ParseAction.h  ParseRule.h  Parser.h  Poset.h  RNGLRParser.h  RegEx.h  RegExState.h  RemovalTransformation.h  State.h  StringReader.h  Symbol.h  Table.h  Tester.h  Type.h  util.h
k_prime_stdlib/: prelude.kp
ki/: Cargo.toml
koka_bench/: CMakeLists.txt  LICENSE  README.md  benchmarks.md  cfold_table.csv  cfold_table.csvwith_relative.csv  cfold_table.md  copy_wrapper.sh  deriv_table.csv  deriv_table.csvwith_relative.csv  deriv_table.md  fib_table.csv  fib_table.csvwith_relative.csv  fib_table.md  java_wrapper.sh  kraken_wrapper.sh  new_test.sh  nqueens_table.csv  nqueens_table.csvwith_relative.csv  nqueens_table.md  plot_demo.py  rbnqueens_table.md  rbtree_table.csv  rbtree_table.csvwith_relative.csv  rbtree_table.md  relative.py  slow_fib_table.csv  slow_fib_table.csvwith_relative.csv  slow_fib_table.md  slow_ish_rbtree_table.csv  slow_ish_rbtree_table.csvwith_relative.csv  slow_ish_rbtree_table.md  slow_rbtree_table.csv  slow_rbtree_table.csvwith_relative.csv  test.sh
koka_bench/kraken/: CMakeLists.txt  cfold.kp  csc_out.wasm  deriv.kp  fib-let.kp  fib.kp  nqueens.kp  rbtree-opt.kp  rbtree.kp  test.sh
koka_bench/picolisp/: CMakeLists.txt  picolisp-cfold.l  picolisp-fib-let.l  picolisp-fib.l  picolisp-nqueens.l  picolisp-rbtree.l
kr/: Cargo.toml
kr/src/: ast.rs  grammar.lalrpop  main.rs  pe_ast.rs  test.rs
kv/: Cargo.toml
kv/src/: ast.rs  basic.rs  eval.rs  grammar.lalrpop  main.rs  opt.rs  test.rs
misc_tests/: basic_match.kp  fact.kp  fact_lognoopt.kp  find.kp  int2hex.kp  leftrotate32bit.kp  t.kp  to_compile.kp
rb_tree_test/: matching.kp
rust_fib/: Cargo.toml
slj/: Cargo.toml
slj/src/: grammar.lalrpop  lib.rs  main.rs
small_demo/: demo.sh  enter_debug.kp  small_lambda_demo.kp  small_test.kp
src/: .ASTTransformation.cpp.swp  ASTData.cpp  ASTTransformation.cpp  CCodeTriple.cpp  CGenerator.cpp  GraphStructuredStack.cpp  Importer.cpp  LALRParser.cpp  Lexer.cpp  NodeTree.cpp  ParseAction.cpp  ParseRule.cpp  Parser.cpp  RNGLRParser.cpp  RegEx.cpp  RegExState.cpp  State.cpp  StringReader.cpp  Symbol.cpp  Table.cpp  Tester.cpp  Type.cpp  util.cpp
stdlib/: .io.krak.un~  .math.krak.un~  address_of_ensure_variable_lower.krak  adt_lower.krak  ast.krak  ast_node.krak  ast_nodes.krak  ast_transformation.krak  binding.krak  bytecode_generator.krak  c_generator.krak  c_line_control.krak  conversions.krak  ctce_lower.krak  defer_lower.krak  function_value_lower.krak  future.krak  grammer.krak  hash_map.krak  hash_set.krak  importer.krak  interpreter.krak  io.krak  lexer.krak  map.krak  math.krak  matrix.krak  mem.krak  method_lower.krak  node_counter.krak  obj_lower.krak  os.krak  parser.krak  pass_common.krak  poset.krak  queue.krak  rc.krak  ref_lower.krak  regex.krak  serialize.krak  (+17 more)
tests/: .gitignore  .test_trigTest.krak.un~  OperatorOverloadTest.krak  RecursiveTest.krak  SupressOut.sh  c_passthrough_diff.krak  commentFirstTest.krak  declarationsTest.krak  destructorTest.expected_results  destructorTest.krak  disabled_test_ctce_pass.krak  emptyBracesFunction.expected_results  emptyBracesFunction.krak  error_test.krak  functionMultipleTemplateTest.krak  functionOrderingTest.krak  functionTemplateTest.krak  grammer.kgm  grammer2.kgm  grammer3.kgm  grammer4.kgm  memTest.expected_results  memTest.krak  moreComplexObjectTest.krak  moreObjectTemplateTest.expected_results  moreObjectTemplateTest.krak  newScoping.expected_results  newScoping.krak  new_runner.sh  objectOrderingTest.krak  runTests-ninja.sh  runTests.sh  sameNameOne.krak  sameNameTwo.krak  scopeQualified.krak  scopeUnqualified.krak  simpleFunctionTest.krak  simpleObjectMultipleTemplateTest.krak  simpleObjectTemplateTest.expected_results  simpleObjectTemplateTest.krak  (+155 more)
website/: LICENSE  (+6 more)
(+134 files in other folders)
