[package]
name = "kv"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.bench]
debug = true

[dependencies]
lalrpop-util = {version="0.19.7", features=["lexer"]}
regex = "1"
once_cell = "1.17.0"
anyhow = "1"
cranelift = "0.95.1"
cranelift-module = "0.95.1"
cranelift-jit = "0.95.1"
cranelift-native = "0.95.1"

[build-dependencies]
lalrpop = "0.19.7"
