[package]
name = "sl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.bench]
debug = true

[dependencies]
lalrpop-util = {version="0.20", features=["lexer"]}
regex = "1"
once_cell = "1"
anyhow = "1"
cranelift        = "0.101.4"
cranelift-module = "0.101.4"
cranelift-jit    = "0.101.4"
cranelift-native = "0.101.4"

[build-dependencies]
lalrpop = "0.20"
